feat: SignMessage + RequestSigner modals
