# src/module/api/service/models/CreateSignMessageRequest.ts
@@ -1,0 +1,9 @@
+/* istanbul ignore file */
+/* tslint:disable */
+/* eslint-disable */
+
+export type CreateSignMessageRequest = {
+    network: 'mainnet' | 'testnet';
+    message: string;
+    receiver: string;
+};
