# src/module/api/service/models/CreateSignerRequest.ts
@@ -1,0 +1,10 @@
+/* istanbul ignore file */
+/* tslint:disable */
+/* eslint-disable */
+
+import type { SignerTransactionDto } from './SignerTransactionDto';
+
+export type CreateSignerRequest = {
+    network: 'mainnet' | 'testnet';
+    transactions: Array<SignerTransactionDto>;
+};
